--- a/css/style.css
+++ b/css/style.css
@@ -53,16 +53,14 @@ body {
 	background-color: #e0e0e0;
 }
 
-nav {
+ .navbar {
 	position: fixed;
 	width: 100%;
 	background-color: #e0e0e0;
 	opacity: 0.8;
+	 z-index: 1000;
 	}
 
-#main-nav {
-	text-align: right;
-}
 
 nav ul li {
 	display: inline-block;
@@ -70,19 +68,14 @@ nav ul li {
 	padding: 8px 20px;
 }
 
+
 nav ul li a{
+	text-align: right;
   text-decoration: none;
 	color: #1ac056;
 	text-shadow: 1px 1px #ffff83;
 }
-/*style aktywowane w responsive*/
-#drop {
-	display: none;
-}
 
-.toggle {
-	display: none;
-}
 
 /*style dla header*/
 #main-header {
@@ -112,7 +105,6 @@ header h2 {
 /*style dla section*/
 section {
 	background-color: #ffffff;
-	width: 100%;
 	text-align: center;
 }
 
@@ -129,7 +121,7 @@ section h2 {
 }
 
 .foto {
-	width: 30%;
+/*	width: 30%;*/
 	max-height: 350px;
 	box-sizing: border-box;
 	padding: 5%;
@@ -138,7 +130,7 @@ section h2 {
 }
 
 article {
-	width: 70%;
+/*	width: 70%;*/
 	text-align: left;
 	box-sizing: border-box;
 	padding: 1% 5%;
@@ -170,15 +162,15 @@ article:after, .foto:after {
 }
 
 #gallery {
-	width: 90%;
+	width: 80%;
 	min-height: 300px;
-	margin: 0 5%;
+	margin: 0 10%;
 	font-size: 0;
 	padding-bottom: 5%;
 }
 
 #gallery .item-1 {
-	width: 33.333%;
+/*	width: 33.333%;*/
 	height: 300px;
 	background: url("../images/formularz.png")  no-repeat;
 	background-size: cover;
@@ -186,6 +178,10 @@ article:after, .foto:after {
 	border: 1px solid rgba(44, 44, 255, 0.44);
 	display: inline-block;
 	position: relative;
+}
+
+#gallery .item-1 a {
+	color: #000;
 }
 
 .item-1 #item-content-1 {
@@ -211,7 +207,7 @@ article:after, .foto:after {
 
 
 #gallery .item-2 {
-	width: 33.333%;
+/*	width: 33.333%;*/
 	height: 300px;
 	box-sizing: border-box;
 	border: 1px solid rgba(44, 44, 255, 0.44);
@@ -219,7 +215,7 @@ article:after, .foto:after {
 }
 
 #gallery .item-3 {
-	width: 33.333%;
+/*	width: 33.333%;*/
 	height: 300px;
 	box-sizing: border-box;
 	border: 1px solid rgba(44, 44, 255, 0.44);
@@ -230,12 +226,12 @@ article:after, .foto:after {
 #footer {
 	padding-top: 5%;
 	background-color: #2c2cff;
-	display: inline-block;
 	color: #ffffff;
+	text-align: left;
 }
 
 #contact {
-	width: 45%;
+/*	width: 45%;*/
 	float: left;
 	text-align: left;
 	padding-left: 5%;
@@ -263,7 +259,7 @@ article:after, .foto:after {
 }
 
 #form {
-	width: 50%;
+/*	width: 50%;*/
 	float: right;
 	text-align: left;
 	padding-top: 20px;
@@ -284,9 +280,6 @@ article:after, .foto:after {
 	width: 15%;	
 }
 
-#footer {
-	text-align: left;
-}
 
 .copy {
 	padding: 1% 5%;
