--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ article:after, .foto:after {
 	height: 300px;
 	background: url('../images/kalkulator.png') no-repeat;
 	background-size: cover;
-	background-position: center;
+	background-position: top left;
 	box-sizing: border-box;
 	border: 1px solid rgba(44, 44, 255, 0.44);
 	display: inline-block;
@@ -246,23 +246,13 @@ article:after, .foto:after {
 }
 
 
-
-/*
-#gallery .item-3 {
-	width: 33.333%;
-	height: 300px;
-	box-sizing: border-box;
-	border: 1px solid rgba(44, 44, 255, 0.44);
-	display: inline-block;
-}
-*/
 /*style do cv*/
 #gallery .item-3 {
 /*	width: 33.333%;*/
 	height: 300px;
 	background: url('../images/cv.png') no-repeat;
 	background-size: cover;
-	background-position: center;
+	background-position: top;
 	box-sizing: border-box;
 	border: 1px solid rgba(44, 44, 255, 0.44);
 	display: inline-block;
